--- a/spoty-records-master/mood.ipynb
+++ b/spoty-records-master/mood.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# My mood in 21-22 (According to Spotify)\n",
+    "# My mood in 2021 - 2022 (30.1.6) (According to Spotify)\n",
     "## To get the data: \n",
     "## https://towardsdatascience.com/get-your-spotify-streaming-history-with-python-d5a208bbcbd3"
    ]
