--- a/spoty-records-master/mood.ipynb
+++ b/spoty-records-master/mood.ipynb
@@ -5,6 +5,8 @@
    "metadata": {},
    "source": [
     "# My mood in 2021 - 2022 (30.1.6) (According to Spotify)\n",
+    "## To get the data: \n",
+    "## www.spotify.com"
    ]
   },
   {
